--- a/templates/index.html
+++ b/templates/index.html
@@ -61,21 +61,21 @@
 	</STYLE>
 	<TITLE>Trading Live Charts</TITLE>
 
-	<LINK rel="shortcut icon" type="image/png" href="images/favicon.png">
-	<LINK href="css/main.css?ver=7.3" rel="stylesheet">
-	<LINK href="css/baloon.css" rel="stylesheet">
+	<LINK rel="shortcut icon" type="image/png" href="../static/images/favicon.png">
+	<LINK href="../static/css/main.css?ver=7.3" rel="stylesheet">
+	<LINK href="../static/css/baloon.css" rel="stylesheet">
 
 	<!-- <SCRIPT src="https://use.fontawesome.com/a4e3744178.js"></SCRIPT> -->
-	<script type="text/javascript" src="js/Chart.min.js"></script>
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="../static/js/Chart.min.js"></script>
+	<script type="text/javascript" src="../static/js/jquery.min.js"></script>
 
 	<SCRIPT type="text/javascript" src="https://s3.tradingview.com/tv.js"></SCRIPT>
-	<SCRIPT type="text/javascript" src="js/cryptocurrencies.js"></SCRIPT>
-	<SCRIPT type="text/javascript" src="js/headstart.js?v3"></SCRIPT>
-	<SCRIPT type="text/javascript" src="js/coinigyexchanges.js"></SCRIPT>
-	<SCRIPT type="text/javascript" src="js/cryptocoins.js"></SCRIPT>
-	<SCRIPT type="text/javascript" src="js/index.js?v2.6"></SCRIPT>
-	<script type="text/javascript" src="js/custom.js"></script>
+	<SCRIPT type="text/javascript" src="../static/js/cryptocurrencies.js"></SCRIPT>
+	<SCRIPT type="text/javascript" src="../static/js/headstart.js?v3"></SCRIPT>
+	<SCRIPT type="text/javascript" src="../static/js/coinigyexchanges.js"></SCRIPT>
+	<SCRIPT type="text/javascript" src="../static/js/cryptocoins.js"></SCRIPT>
+	<SCRIPT type="text/javascript" src="../static/js/index.js?v2.6"></SCRIPT>
+	<script type="text/javascript" src="../static/js/custom.js"></script>
 </HEAD>
 
 <BODY style="background: #363843;">
@@ -303,6 +303,7 @@
 			<DIV id="charts"></DIV>
 		</DIV>
 		<div class="trading-activity">
+			<input type="text" id="trading-value" hidden name="" value="{{data}}">
 			<canvas id="myChart" width="" height=""></canvas>
 		</div>
 		<DIV class="modalAd">
@@ -314,7 +315,7 @@
 					</DIV>
 
 				</DIV>
-	     <DIV style="text-align: center; cursor:pointer;"
+	     <DIV style="text-align: center; cursor:pointer;">
 					<button class="closeBtn" onclick="showAd()">Close</button>
 				</DIV>
 		
