--- a/static/css/main.css
+++ b/static/css/main.css
@@ -511,6 +511,7 @@
 	width: calc(100%);
 	height: calc(45%);
 	z-index: 0;
+	opacity: 0;
 	position: absolute;
 	top: 25px;
 }
@@ -521,4 +522,5 @@
 
 #bitcoin-chart {
 	z-index: : 1;
+	opacity: 1;
 }
