--- a/templates/index.html
+++ b/templates/index.html
@@ -284,16 +284,17 @@
 			<DIV id="charts"></DIV>
 		</DIV>
 		<div class="trading-activity">
-			<input type="text" class="coin_init" id="bitcoin-value" hidden name="" value="{{data[0]}}">
-			<input type="text" class="coin_init" id="ethereum-value" hidden name="" value="{{data[1]}}">
-			<input type="text" class="coin_init" id="chainlink-value" hidden name="" value="{{data[2]}}">
-			<input type="text" class="coin_init" id="litecoin-value" hidden name="" value="{{data[3]}}">
-			<input type="text" class="coin_init" id="bitcoin_cash-value" hidden name="" value="{{data[4]}}">
-			<input type="text" class="coin_init" id="uniswap-value" hidden name="" value="{{data[5]}}">
-			<input type="text" class="coin_init" id="wrapped_bitcoin-value" hidden name="" value="{{data[6]}}">
-			<input type="text" class="coin_init" id="aave-value" hidden name="" value="{{data[7]}}">
-			<input type="text" class="coin_init" id="eos-value" hidden name="" value="{{data[8]}}">
-			<input type="text" class="coin_init" id="tezos-value" hidden name="" value="{{data[9]}}">
+			<input type="text" class="coin_init" id="bitcoin-value" hidden name="" value="{{data[0][0]}}">
+			<input type="text" class="coin_init" id="ethereum-value" hidden name="" value="{{data[0][1]}}">
+			<input type="text" class="coin_init" id="chainlink-value" hidden name="" value="{{data[0][2]}}">
+			<input type="text" class="coin_init" id="litecoin-value" hidden name="" value="{{data[0][3]}}">
+			<input type="text" class="coin_init" id="bitcoin_cash-value" hidden name="" value="{{data[0][4]}}">
+			<input type="text" class="coin_init" id="uniswap-value" hidden name="" value="{{data[0][5]}}">
+			<input type="text" class="coin_init" id="wrapped_bitcoin-value" hidden name="" value="{{data[0][6]}}">
+			<input type="text" class="coin_init" id="aave-value" hidden name="" value="{{data[0][7]}}">
+			<input type="text" class="coin_init" id="eos-value" hidden name="" value="{{data[0][8]}}">
+			<input type="text" class="coin_init" id="tezos-value" hidden name="" value="{{data[0][9]}}">
+			
 			<canvas id="bitcoin-chart" class="activity-chart" width="" height=""></canvas>
 			<canvas id="ethereum-chart" class="activity-chart"  width="" height=""></canvas>
 			<canvas id="chainlink-chart" class="activity-chart" width="" height=""></canvas>
