--- a/templates/index.html
+++ b/templates/index.html
@@ -294,7 +294,9 @@
 			<input type="text" class="coin_init" id="aave-value" hidden name="" value="{{data[7][0]}}">
 			<input type="text" class="coin_init" id="eos-value" hidden name="" value="{{data[8][0]}}">
 			<input type="text" class="coin_init" id="tezos-value" hidden name="" value="{{data[9][0]}}">
-			
+
+			<input type="text" class="time-init" id="bitcoin-time" hidden name="" value="{{data[0][1]}}">
+
 			<canvas id="bitcoin-chart" class="activity-chart" width="" height=""></canvas>
 			<canvas id="ethereum-chart" class="activity-chart"  width="" height=""></canvas>
 			<canvas id="chainlink-chart" class="activity-chart" width="" height=""></canvas>
@@ -305,6 +307,17 @@
 			<canvas id="aave-chart" class="activity-chart" width="" height=""></canvas>
 			<canvas id="eos-chart" class="activity-chart" width="" height=""></canvas>
 			<canvas id="tezos-chart" class="activity-chart" width="" height=""></canvas>
+<!-- 
+			<div id="bitcoin_chart" class="my-chart"></div>
+			<div id="ethereum_chart" class="my-chart"></div>
+			<div id="chainlink_chart" class="my-chart"></div>
+			<div id="litecoin_chart" class="my-chart"></div>
+			<div id="bitcoin_cash_chart" class="my-chart"></div>
+			<div id="uniswap_chart" class="my-chart"></div>
+			<div id="wrapped_bitcoin_chart" class="my-chart"></div>
+			<div id="aave_chart" class="my-chart"></div>
+			<div id="eos_chart" class="my-chart"></div>
+			<div id="tezos_chart" class="my-chart"></div> -->
 		</div>
 		<DIV class="modalAd">
 			<DIV>
